github link added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div class="clickable">
         <h2><a href="#pJump">projects</a></h2>
-        <h2><a href="#">github</a></h2>
+        <h2><a href="https://github.com/7joanneliu/DEV">github</a></h2>
       </div>
 
     <a id="top" href="#header"><h2>top</h2></a>
