--- a/maize/maize-master/index.html
+++ b/maize/maize-master/index.html
@@ -19,7 +19,7 @@
           kinematic-body
           position="-20 20.8 20">
       </a-entity>
-      <!-- birds-eye view box to stand on j-->
+      <!-- birds-eye view box to stand on joanne testing-->
       <a-box static-body
           depth="0.25" height="0.5" width="0.5"
           position="-20 19.8 20"
